Edited font size of buttons and form texts. Edited button styling on signup page to prevent odd positioning on mobile view.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -28,7 +28,7 @@ p, .form-group {
     background-color: #2f4448;
     border-color: #2f4448;
     color: #fcf9f6;
-    font-size: 1em;
+    font-size: 1.1em;
 }
 
 .btn:hover {
